syntax = "proto3";
option go_package="github.com/AchillesLe/register-user/user-service";

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string phone = 3;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User);
    rpc GetUsers(Empty) returns (Users);
}

message Empty {}

message Users {
    repeated User users = 1;
}
